# qgar

./: .gitignore  CMakeLists.txt  COPYING  INSTALL  LICENSE_QPL_LGPL.txt  qgar-mdk.specs.in  qgar.in
QgarApps/: CMakeLists.txt  qgarguicfg.xml.in
QgarApps/QAdist34Skeletonization/: CMakeLists.txt  QAdist34Skeletonization.cpp  QAdist34Skeletonization_descr.xml
QgarApps/QAedgesCanny/: CMakeLists.txt  QAedgesCanny.cpp  QAedgesCanny_descr.xml
QgarApps/QAedgesDeriche/: CMakeLists.txt  QAedgesDeriche.cpp  QAedgesDeriche_descr.xml
QgarApps/QAkanungoDegrade/: CMakeLists.txt  QAkanungoDegrade.cpp  QAkanungoDegrade_descr.xml
QgarApps/QAmorphoClosing/: CMakeLists.txt  QAmorphoClosing.cpp  QAmorphoClosing_descr.xml
QgarApps/QAmorphoOpening/: CMakeLists.txt  QAmorphoOpening.cpp  QAmorphoOpening_descr.xml
QgarApps/QApruneSmallCC/: CMakeLists.txt  QApruneSmallCC.cpp  QApruneSmallCC_descr.xml
QgarApps/QAtextExtraction/: CMakeLists.txt  QAtextExtraction.cpp  QAtextExtraction_descr.xml
QgarApps/QAtextGraphicSeparation/: CMakeLists.txt  QAtextGraphicSeparation.cpp  QAtextGraphicSeparation_descr.xml
QgarApps/QAthickThinSeparation/: CMakeLists.txt  QAthickThinSeparation.cpp  QAthickThinSeparation_descr.xml
QgarApps/QAthrsBinarization/: CMakeLists.txt  QAthrsBinarization.cpp  QAthrsBinarization_descr.xml
QgarApps/QAtrierBinarization/: CMakeLists.txt  QAtrierBinarization.cpp  QAtrierBinarization_descr.xml
QgarApps/QAvectorizationRW/: CMakeLists.txt  QAvectorizationRW.cpp  QAvectorizationRW_descr.xml
QgarDoc/: CMakeLists.txt
QgarDoc/src/api/qgarapps/: Doxyfile.in  Doxygen.QgarApps.Groups  Doxygen.bibliography
QgarDoc/src/api/qgargui/: Doxyfile.in
QgarDoc/src/api/qgarlib/: Doxyfile-clientdoc.in  Doxyfile.in  Doxygen.QgarLib.Groups  Doxygen.bibliography
QgarDoc/src/bibliography/: bibliography.dsl  bibliography.xml.in
QgarDoc/src/design/: qgarAppsDesign.dsl  qgarAppsDesign.xml.in
QgarDoc/src/developer/codingstandards/: codingStandards.css  codingStandards.dsl  codingStandards.xml.in
QgarDoc/src/developer/codingstandardsabstract/: codingStandardsAbstract.dsl  codingStandardsAbstract.xml.in
QgarDoc/src/developer/pkg/: packagingGuide.dsl  packagingGuide.xml.in
QgarDoc/src/developer/xemacs/: Xemacs.css  Xemacs.dsl  Xemacs.xml.in
QgarDoc/src/installation/compilation/: compilationGuide.dsl  compilationGuide.xml.in
QgarDoc/src/installation/installation/: installGuide.dsl  installGuide.xml.in  installWindows.dsl  installWindows.xml.in
QgarDoc/src/main/: index.html  leftMenu.html.in  license-lgpl.html  license-qpl.html  main.css  main.dsl  main.xml.in  qgarLibDesign.html
QgarGui/: CMakeLists.txt  QGAboutDialog.cpp  QGAboutDialog.h  QGAbstractAppParamInput.cpp  QGAbstractAppParamInput.h  QGAbstractAppParamInput.moc  QGAbstractDocViewerInteractor.cpp  QGAbstractDocViewerInteractor.h  QGAbstractLayer.cpp  QGAbstractLayer.h  QGAbstractMainWindowCommand.cpp  QGAbstractMainWindowCommand.h  QGAlgoMenu.cpp  QGAlgoMenu.h  QGAlgoMenu.moc  QGAlgoMenuFactory.cpp  QGAlgoMenuFactory.h  QGAppCmdLinePanel.cpp  QGAppCmdLinePanel.h  QGAppDescrPanel.cpp  QGAppDescrPanel.h  QGAppDialogMediator.cpp  QGAppDialogMediator.h  QGAppLauncher.cpp  QGAppLauncher.h  QGAppLauncher.moc  QGAppObserverIf.h  QGAppParamInputFile.cpp  QGAppParamInputFile.h  QGAppParamInputFile.moc  QGAppParamInputInt.cpp  QGAppParamInputInt.h  QGAppParamInputInt.moc  QGAppParamInputReal.cpp  QGAppParamInputReal.h  QGAppParamInputReal.moc  QGAppParamInputUnknown.cpp  QGAppParamInputUnknown.h  QGAppParamInputUnknown.moc  QGAppParamPanel.cpp  (+144 more)
QgarGui/xpm/: arc.xpm  bearingw.xpm  d_fileopen.xpm  d_fileopen2.xpm  d_help.xpm  door.xpm  drawCursor.xpm  editcopy.xpm  editcut.xpm  editpaste.xpm  eraseCursor.xpm  eraser.xpm  exit.xpm  fileopen2.xpm  help.xpm  info.xpm  move.xpm  pencil.xpm  pipe.xpm  polyline.xpm  rectangle_select.xpm  redo.xpm  segment.xpm  skull.xpm  stairs.xpm  superimp.xpm  thick.xpm  undo.xpm  viewmag+.xpm  viewmag-.xpm  window1.xpm  window2.xpm
cmake_adds/: Dpkg-deb2.cmake  Rpmbuild.cmake
qgardevlib/: BresenhamCircle.cpp  BresenhamCircle.h  BresenhamLine.cpp  BresenhamLine.h  CMakeLists.txt
qgarlib/: AbstractFile.cpp  AbstractFile.h  AbstractGenPointChain.h  AbstractGenPointChain.tcc  AbstractGradientImage.cpp  AbstractGradientImage.h  AbstractGraphicsFile.cpp  AbstractGraphicsFile.h  AbstractMultiImage.cpp  AbstractMultiImage.h  AbstractPbmPlusFile.cpp  AbstractPbmPlusFile.h  AbstractQgarError.cpp  AbstractQgarError.h  BoundingBox.cpp  BoundingBox.h  CMakeLists.txt  CannyGradientImage.cpp  CannyGradientImage.h  CleanedBinaryImage.cpp  CleanedBinaryImage.h  CloseBinaryImage.cpp  CloseBinaryImage.h  CloseImage.cpp  CloseImage.h  Component.cpp  Component.h  ConnectedComponents.cpp  ConnectedComponents.h  ConnectedComponentsImpl.cpp  ConnectedComponentsImpl.h  ContrastEnhancedImage.cpp  ContrastEnhancedImage.h  DericheGradientImage.cpp  DericheGradientImage.h  DesShapeContext.cpp  DesShapeContext.h  DilatedBinaryImage.cpp  DilatedBinaryImage.h  DilatedImage.cpp  (+191 more)
qgarlib/testsuite/: AbstractGenPrimitiveTest.cpp  AbstractGenPrimitiveTest.h  AbstractGenQgarPrimitiveTest.cpp  AbstractGenQgarPrimitiveTest.h  BoundingBoxTest.cpp  BoundingBoxTest.h  CMakeLists.txt  ConnectedComponentsTest.cpp  ConnectedComponentsTest.h  ConnectedComponentsTest.img_00.pbm  ConnectedComponentsTest.img_01.pbm  ConnectedComponentsTest.img_02.pbm  ConnectedComponentsTest.img_03.pbm  ConnectedComponentsTest.img_04.pbm  ConnectedComponentsTest.img_05.pbm  ConnectedComponentsTest.img_06.pbm  ConnectedComponentsTest.img_07.pbm  ConnectedComponentsTest.img_08.pbm  ConnectedComponentsTest.img_09.pbm  ConnectedComponentsTest.img_10.pbm  FreemanChainTest.cpp  FreemanChainTest.h  FreemanCodeTest.cpp  FreemanCodeTest.h  GenArcTest.cpp  GenArcTest.h  GenConvexHullTest.cpp  GenConvexHullTest.h  GenConvolImageTest.cpp  GenConvolImageTest.h  GenEdgeGenNodeTest.cpp  GenEdgeGenNodeTest.h  GenImageTest.cpp  GenImageTest.h  GenKMeansTest.cpp  GenKMeansTest.h  GenMask1dTest.cpp  GenMask1dTest.h  GenMask2dTest.cpp  GenMask2dTest.h  (+29 more)
(+51 files in other folders)
